# bill-scanner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scanner/: cli.py  errors.py  subcriptions.py  transactions.py
scripts/: main.py
subscriptions/: __init__.py
tests/: test_find.py
tests/test_subscriptions/: test_find.py
tests/test_transactions/: test_from_csv.py
tests/test_transactions/data/: statement.csv  statement_several_currencies.csv
