[tool.poetry]
name = "bill-scanner"
version = "0.1.0"
description = "find subscriptions and recurring payments in your bank statement"
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]
license = "MIT"
packages = [{include = "scanner"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
