[tool.poetry]
name = "bill-scanner"
version = "0.1.0"
description = "find subscriptions and recurring payments in your bank statement"
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]
license = "MIT"
packages = [{include = "scanner"}, {include = "scripts"}]

[tool.poetry.scripts]
bill-scanner = "scripts.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
