[tool.poetry]
name = "bill-scanner"
version = "0.1.0"
description = "find subscriptions and recurring payments in your bank statement"
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]
license = "MIT"
packages = [{include = "scanner"}, {include = "scripts"}]

[tool.poetry.scripts]
bill-scanner = "scripts.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ruff = "^0.0.254"
pyright = "^1.1.296"

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
